@@ -10,6 +10,14 @@ BEGIN {
 
 require_ok('Genealogy::Wills') || print 'Bail out!';
 
+if(my $reporter = $ENV{'PERL_CPAN_REPORTER_CONFIG'}) {
+	# https://www.cpantesters.org/cpan/report/ef9905ca-3a1c-11ef-a8e6-11166e8775ea
+	if($reporter =~ /smoker/i) {
+		warn 'AUTOMATED_TESTING added for you';
+		$ENV{'AUTOMATED_TESTING'} = 1;
+	}
+}
+
 # Smoker testing can do sanity checking without building the database
 if((!$ENV{'AUTOMATED_TESTING'}) && (!$ENV{'GITHUB_ACTIONS'}) &&
    (!-r 'lib/Genealogy/Wills/data/wills.sql')) {
